# texmgr

./: pyproject.toml
src/texmgr/: cli.py  config.py
src/texmgr/builder/: __init__.py  build.py
src/texmgr/init/: __init__.py  initializer.py
src/texmgr/install/: __init__.py  installer.py  utils.py
src/texmgr/pkg/: __init__.py  manager.py
src/texmgr/utils/: cmds.py  errors.py  fileops.py  logs.py
