[project]
name = "texmgr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
texmgr="texmgr.__main__:main"

[dependency-groups]
dev = [
    "hatch>=1.13.0",
    "mypy>=1.13.0",
    "ruff>=0.8.1",
    "twine>=6.0.1",
]
